Fixed section title position when navigating between sections
- Title no longer hidden behind navbar

--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -49,6 +49,13 @@ body {
     width: 80%;
 }
 
+section {
+    .title {
+        padding-top: 60px;
+        font-size: 1.75em;
+    }
+}
+
 nav {
     background-color: $black;
     color: $lightGrey;
@@ -139,7 +146,7 @@ nav {
         }
     }
     
-    .title {
+    .name {
         text-align: center;
         font-weight: bold;
         padding: 5px 0px;
